# aetherium-trader-datapipeline

./: .gitignore  Cargo.toml
compose/: docker-compose.yml
docs/: Aetherium Trader - Distributed Ingestion Platform (IDD).md  Aetherium Trader - 系統設計文件.md
ingestion/application/: Cargo.toml
ingestion/application/src/: backfill_service.rs  historical_data.rs  job_state.rs  lib.rs  ports.rs  rate_limiter.rs  services.rs
ingestion/application/tests/: backfill_job_init_test.rs  backfill_resume_flow.rs
ingestion/domain/: Cargo.toml
ingestion/domain/src/: data_gap.rs  date_range.rs  lib.rs  tick.rs
ingestion/infrastructure/: Cargo.toml
ingestion/infrastructure/src/: historical_gateway.rs  lib.rs  rate_limiter.rs  redis_connection.rs  repository.rs
ingestion/infrastructure/src/detectors/: gap.rs  mod.rs
ingestion/infrastructure/src/gateways/: historical.rs  market_data.rs  mod.rs
ingestion/infrastructure/src/rate_limiting/: limiter.lua  limiter.rs  mod.rs  redis.rs
ingestion/infrastructure/src/repositories/: mod.rs  parquet.rs
ingestion/infrastructure/src/state/: mod.rs  redis.rs
ingestion/infrastructure/tests/: job_state_repository_test.rs  rate_limiter_integration_test.rs  rate_limiter_lua_test.rs
