[package]
name = "ingestion-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rust_decimal_macros = "1.36"