[package]
name = "ingestion-infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
ingestion-domain = { path = "../domain" }
ingestion-application = { path = "../application" }

async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
rust_decimal = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Parquet dependencies
arrow = { workspace = true }
parquet = { workspace = true }

# Redis client
redis = { version = "1.0.0-rc.3", features = ["tokio-comp", "r2d2"] }

# Random data generation for mock
rand = "0.9.2"

shaku = { workspace = true }

lazy_static = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
